--- a/.vromerc
+++ b/.vromerc
@@ -1,1 +1,1 @@
-set disablesites=www.wunderlist.com, mail.google.com, google.com/reader, http://webanywhere.cs.washington.edu/beta, c9.io, www.codeacademy.com
+set disablesites=www.wunderlist.com, mail.google.com, google.com/reader, webanywhere.cs.washington.edu/beta, c9.io, www.codeacademy.com
