--- a/.vromerc
+++ b/.vromerc
@@ -1,1 +1,1 @@
-set disablesites=c9.io, www.codeacademy.com, www.wunderlist.com, mail.google.com, google.com/reader
+set disablesites=c9.io, www.codecacademy.com, www.wunderlist.com, mail.google.com, google.com/reader
