Add global gitignore. Changes to others.
Vimrc is more portable. Bash prompt is a little more clear and over two
lines. Gitconfig fixes path to global gitignore.

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 	email = imaginationac@gmail.com
 [core]
 	editor = "gvim -f"
-	excludesfile = /home/dorian/.gitignore_global
+	excludesfile = /home/dorian/.gitignore
 [color]
 	ui = true
 [merge]
