--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,4 @@
 [color]
 	ui = true
 [merge]
-	tool = splice
-[mergetool "splice"]
-	cmd = "gvim -f $BASE $LOCAL $REMOTE $MERGED -c 'SpliceInit'"
-	trustExitCode = true
+	tool = gvimdiff
