--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 	ci = commit
 	st = status
 	br = branch
-	hist = log --pretty=format:\"%Cgreen%h %ad | %s%d [%an]\" --graph --date=short
+	hist = log --pretty=format:\"%Cgreen%h%Creset %ad | %s%d %Cblue[%an]\" --graph --date=short
 	type = cat-file -t
 	dump = cat-file -p
 [user]
