tmux.conf: Change prefix, use 256 color terminal.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,14 @@
 # Source powerline tmux configuration if available.
 source '/home/dorian/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+
+# Force 256 color support.
+set-option -g default-terminal "screen-256color"
+
+# TODO: Use vi keys instead of arrows
+
+# Change prefix to Ctrl+a
+set-option -g prefix C-a
+unbind-key C-b
+bind-key C-a send-prefix
+
+# TODO: Use mouse to scrollback screen instead of command history.
