tmux.conf: Set the mouse able to copy.

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,3 +12,4 @@ unbind-key C-b
 bind-key C-a send-prefix
 
 # TODO: Use mouse to scrollback screen instead of command history.
+setw -g mode-mouse on
