tmux.conf: Use powerline in tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # Source powerline tmux configuration if available.
-source '/home/dorian/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf'
+source '/Users/dorianpatterson/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf'
 
 # Force 256 color support.
 set-option -g default-terminal "screen-256color"
