--- a/tmux.conf
+++ b/tmux.conf
@@ -12,3 +12,8 @@ unbind-key C-b
 bind-key C-a send-prefix
 
 # TODO: Use mouse to scrollback screen instead of command history.
+
+# Fix for Powerline fonts in tmux
+# See: https://apple.stackexchange.com/questions/261505/macvim-can-not-load-custom-powerline-fonts-when-started-from-tmux-session
+# Run `brew install reattach-to-user-namespace` first.
+set-option -g default-command "reattach-to-user-namespace -l zsh"
