tmux.conf: Input dealy set to 1ms.

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,3 +17,6 @@ bind-key C-a send-prefix
 # See: https://apple.stackexchange.com/questions/261505/macvim-can-not-load-custom-powerline-fonts-when-started-from-tmux-session
 # Run `brew install reattach-to-user-namespace` first.
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# Set input-delay to lowest value
+set-option -s escape-time 1
