tmux.conf: Open new shells in the same working directory as the last pane.

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,3 +20,8 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Set input-delay to lowest value
 set-option -s escape-time 1
+
+# Open new windows, panes in the current pane's working directory
+bind c new-window -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
