tmux.conf: Use tpm for tmux plugin management

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,27 +1,22 @@
-# Source powerline tmux configuration if available.
-source '/Users/dorianpatterson/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf'
+# Use mouse to scroll pane
+set -g mouse on
 
-# Force 256 color support.
-set-option -g default-terminal "screen-256color"
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
 
-# TODO: Use vi keys instead of arrows
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon session
+set -g @dracula-plugins "cpu-usage ram-usage git time"
+set -g @dracula-git-no-repo-message "(N/A)"
 
-# Change prefix to Ctrl+a
-set-option -g prefix C-a
-unbind-key C-b
-bind-key C-a send-prefix
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
 
-# TODO: Use mouse to scrollback screen instead of command history.
 
-# Fix for Powerline fonts in tmux
-# See: https://apple.stackexchange.com/questions/261505/macvim-can-not-load-custom-powerline-fonts-when-started-from-tmux-session
-# Run `brew install reattach-to-user-namespace` first.
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
-# Set input-delay to lowest value
-set-option -s escape-time 1
-
-# Open new windows, panes in the current pane's working directory
-bind c new-window -c "#{pane_current_path}"
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
