--- a/tmux.conf
+++ b/tmux.conf
@@ -6,10 +6,12 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 
+# See https://draculatheme.com/tmux for documentation
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
 set -g @dracula-plugins "cpu-usage ram-usage git time"
 set -g @dracula-git-no-repo-message "(N/A)"
+set -g @dracula-refresh-rate 1
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
