--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,7 @@ set -g @dracula-show-left-icon session
 set -g @dracula-plugins "cpu-usage ram-usage git time"
 set -g @dracula-git-no-repo-message "(N/A)"
 set -g @dracula-refresh-rate 1
+set -g @dracula-show-timezone false
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
